--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
   <!-- footer section -->
   <footer>
-    <img src="/home/durga/Desktop/fylo-dark-theme-landing-page-master/images/logo.svg" alt="logo" class="logo">
+    <img src="/images/logo.svg" alt="logo" class="logo">
     <div class="footer-1">
       <div class="location">
         <i class="fas fa fa-map-marker"></i>
